# serde-ignored-type

./: Cargo.toml  README.md
src/: lib.rs
